[tool.poetry]
name = "repl_pygame_Multiplayer-Pong"
version = "0.1.0"
description = ""
authors = ["princeminz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
pyglet = "^1.5.21"
pygase = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
